--- a/Task1/Task1.vcxproj
+++ b/Task1/Task1.vcxproj
@@ -143,10 +143,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Logger.h" />
+    <ClInclude Include="Logger0.h" />
+    <ClInclude Include="Logger1.h" />
+    <ClInclude Include="Logger2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Task1.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="functions.cpp" />
+    <ClCompile Include="Logger.cpp" />
+    <ClCompile Include="Logger0.cpp" />
+    <ClCompile Include="Logger1.cpp" />
+    <ClCompile Include="Logger2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
